--- a/.env
+++ b/.env
@@ -1,15 +1,6 @@
-#Your discord bot token
 DISCORDTOKEN=
-
-#Your osu! API token
 OSUAPI=
-
-#Fifa world cup API email & password
-FIFAEMAIL=
-FIFAPASSWORD=
-
-#bit.ly API token
+FIFA2022APIEMAIL=
+FIFA2022APIPASSWORD=
 BITLYAPI=
-
-#Hypixel API token
 HYPIXELAPI=
